--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Kuradeel
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: A Computer Science student from Britain
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://68.media.tumblr.com/1eefe9a1ed79bdf873639cf480fbb6d9/tumblr_o678eafI6D1uzn48xo9_1280.jpg
 
 #
 # Flags below are optional
